--- a/version-2.0/roman/src/Muli-ExtraLight.ufo/fontinfo.plist
+++ b/version-2.0/roman/src/Muli-ExtraLight.ufo/fontinfo.plist
@@ -25,7 +25,13 @@
 	<key>note</key>
 	<string></string>
 	<key>openTypeHeadCreated</key>
-	<string>2014/02/26 01:01:12</string>
+	<string>2014/02/26 04:17:46</string>
+	<key>openTypeHheaAscender</key>
+	<integer>2412</integer>
+	<key>openTypeHheaDescender</key>
+	<integer>-607</integer>
+	<key>openTypeHheaLineGap</key>
+	<integer>0</integer>
 	<key>openTypeNameDesigner</key>
 	<string>Vernon Adams</string>
 	<key>openTypeNameDesignerURL</key>
