--- a/version-2.0/italic/src/Muli-Semi-BoldItalic.ufo/fontinfo.plist
+++ b/version-2.0/italic/src/Muli-Semi-BoldItalic.ufo/fontinfo.plist
@@ -25,7 +25,13 @@
 	<key>note</key>
 	<string></string>
 	<key>openTypeHeadCreated</key>
-	<string>2014/02/26 05:23:04</string>
+	<string>2014/02/26 04:17:46</string>
+	<key>openTypeHheaAscender</key>
+	<integer>2412</integer>
+	<key>openTypeHheaDescender</key>
+	<integer>-607</integer>
+	<key>openTypeHheaLineGap</key>
+	<integer>0</integer>
 	<key>openTypeNameDesigner</key>
 	<string>Vernon Adams</string>
 	<key>openTypeNameDesignerURL</key>
@@ -48,7 +54,7 @@ http://scripts.sil.org/OFL
 	<key>openTypeNamePreferedFamilyName</key>
 	<string>Muli</string>
 	<key>openTypeNamePreferedSubfamilyName</key>
-	<string>Bold</string>
+	<string>SemiBoldItalic</string>
 	<key>openTypeOS2WidthClass</key>
 	<integer>5</integer>
 	<key>openTypeOS2WeightClass</key>
@@ -61,15 +67,15 @@ http://scripts.sil.org/OFL
 		<integer>0</integer>
 	</array>
 	<key>openTypeOS2TypoAscender</key>
-	<integer>2364</integer>
+	<integer>2412</integer>
 	<key>openTypeOS2TypoDescender</key>
-	<integer>-582</integer>
+	<integer>-607</integer>
 	<key>openTypeOS2TypoLineGap</key>
 	<integer>0</integer>
 	<key>openTypeOS2WinAscent</key>
-	<integer>2364</integer>
+	<integer>2412</integer>
 	<key>openTypeOS2WinDescent</key>
-	<integer>582</integer>
+	<integer>607</integer>
 	<key>postscriptFontName</key>
 	<string>Muli-Semi-BoldItalic</string>
 	<key>postscriptFullName</key>
